# training

./: README.md  pyproject.toml
bpe_tokenizer/: ALGORITHM.md  __init__.py  tokenizer.py
examples/: tiny_corpus.txt
finetune/: __init__.py
finetune/sft/: README.md  __init__.py  data.py  methods.py  train.py
inference/: README.md  __init__.py  predictor.py
inference/openai_chat/: README.md  __init__.py  server.py
inference/openai_chat/static/: styles.css
language_model/: README.md  __init__.py  attention.py  blocks.py  config.py  data.py  feed_forward.py  generation.py  gpt.py  model.py  norms.py  rope.py  tokenization.py  training.py
openai_chat/: README.md  __init__.py  client.py  server.py
openai_chat/static/: app.js  index.html
scripts/: generate_text.py  train_small_model.py
tests/: test_inference.py  test_language_model.py  test_openai_chat.py  test_sft.py  test_tokenizer.py
