[project]
name = "bpe-tokenizer"
version = "0.1.0"
description = "Byte-level BPE tokenizer and small language model training utilities."
requires-python = ">=3.10"
dependencies = ["regex>=2024.0.0", "torch>=2.0.0"]

[tool.setuptools.packages.find]
include = ["bpe_tokenizer*", "finetune*", "inference*", "language_model*"]

[tool.setuptools.package-data]
"inference.openai_chat" = ["static/*.css", "static/*.html", "static/*.js"]
